# cgp_crossover

./: README.md  cgp  cgp.gv  cgp.py  cgp_active_nodes  cgp_libs.txt  cgp_output.pkl  find.txt  functions.py  functions_backup.py  jobs.txt  lgp.py  output.pkl  pyproject.toml  requirements.txt  selection_methods.py  turorial.rar
Mutation_launcher/: AdaptiveMutation_onepointcrossover.sb  AdaptiveMutation_twopointcrossover.sb  AdaptiveMutation_twopointcrossover.sh  AdaptiveMutation_withoutcrossover.sb  AdaptiveMutation_withoutcrossover.sh  cgp_BasicMutation_Onepointcrossover.sb  cgp_BasicMutation_twopointcrossover.sb  cgp_BasicMutation_twopointcrossover.sh  cgp_BasicMutation_withoutcrossover.sb  cgp_BasicMutation_withoutcrossover.sh  figures_adaptive.sb  figures_basic.sb  figures_swap.sb  lgp_onepointcrossover.sb  lgp_onepointcrossover.sh  swapmutation_onepointcrossover.sb  swapmutation_onepointcrossover.sh  swapmutation_twopointcrossover.sb  swapmutation_twopointcrossover.sh  swapmutation_without crossover.sb  swapmutation_without crossover.sh
launchers/: cgp.sb  cgp.sh  cgp_1x.sb  cgp_1x.sh  cgp_2x.sb  cgp_2x.sh  cgp_40.sb  cgp_40.sh  cgp_base.sh  cgp_diabetes.sb  cgp_diabetes.sh  cgp_div.sb  cgp_div.sh  cgp_dnc.sb  cgp_dnc.sh  cgp_nx.sb  cgp_nx.sh  cgp_real.sb  cgp_real.sh  cgp_sgx.sb  cgp_sgx.sh  cgp_uniform.sb  cgp_uniform.sh  cgp_vlen.sb  cgp_vlen.sh  lgp.sb  lgp.sh  lgp_1x.sb  lgp_1x.sh  lgp_2x.sb  lgp_2x.sh  lgp_fx.sb  lgp_fx.sh  lgp_mut.sb  lgp_mut.sh  run_cgp_base.sb
mutation/: AdaptiveMutation_onepointcrossover.py  AdaptiveMutation_twopointcrossover.py  (+11 more)
(+13400 files in other folders)
