[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cgp-crossover"
version = "0.1.0"
description = "Cartesian Genetic Programming"
authors = [
    { name = "Rachel Kocherovsky" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib"
]

[tool.setuptools.packages.find]
where = ["src"]